--- a/tps_game/Views/Home/Index.cshtml
+++ b/tps_game/Views/Home/Index.cshtml
@@ -13,14 +13,14 @@
 
     #game > div {
         display: inline-block;
-        width: 5px;
-        height: 5px;
+        width: 25px;
+        height: 25px;
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         background: blue;
-        /*border-right: 1px solid black;
-        border-bottom: 1px solid black;*/
+        border-right: 1px solid black;
+        border-bottom: 1px solid black;
     }
 
     #game > div.is-player {
