--- a/tps_game/Views/Game/Snake.cshtml
+++ b/tps_game/Views/Game/Snake.cshtml
@@ -1,16 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Snake";
 }
 
 <style>
-
-    #logContainer {
-        width: 100%;
-        max-width: 800px;
-        max-height: 500px;
-        overflow-y: scroll;
-        margin: 0 auto;
-    }
 
     #ulLog li {
         background: #292d3f;
@@ -25,9 +17,9 @@
         margin-top: 15px;
     }
 
-    #gameCanvasContainer:focus, #gameCanvasContainer *:focus {
-        outline: none;
-    }
+        #gameCanvasContainer:focus, #gameCanvasContainer *:focus {
+            outline: none;
+        }
 
     #playersContainer {
         font-family: monospace;
@@ -37,7 +29,7 @@
 
     #ulPlayers > li {
         margin-bottom: 5px;
-    } 
+    }
 
     #playersContainer .player-color {
         display: inline-block;
@@ -77,35 +69,9 @@
     }
 </style>
 
-<div class="max-w-[300px] mx-auto">
-    <h1 class="text-xl"> Games </h1>
-    <ul>
-        <li>
-            <a href="/game/snake" style="color: blue;">Snake</a>
-        </li>
-    </ul>
-</div>
-
-<div id="mainHeading" class="text-center mt-4">
-    <h1 class="text-[2rem] font-bold">Welcome to the MP Game</h1>
-</div>
-
-<!-- Login form -->
-<div id="loginForm">
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-        <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="username_i">
-                Username
-            </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username_i" type="text" placeholder="Username">
-        </div>
-        <div class="flex items-center justify-between">
-            <button id="signInButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:opacity-75" type="button" disabled onclick="connect()">
-                Connect
-            </button>
-        </div>
-    </form>
-</div>
+<h1 class="text-center">
+    This is a snake game
+</h1>
 
 <!-- GAME -->
 <div id="gameCanvasContainer" class="relative py-[48px] mb-[25px] mx-auto text-center hidden">
@@ -134,65 +100,41 @@
 
 </div>
 
-<!-- Players list -->
-<div id="playersContainer">
-    <ul id="ulPlayers"></ul>
-</div>
-
 <!-- Logs -->
-<div id="logContainer" class="px-3 hidden">
-    <h3>
-        Logs (<span id="logCount">1</span>):
-    </h3>
-    <ul id="ulLog" class="list-none">
-        <li>
-            1. <strong><pre class="inline">Logs go here</pre></strong>
-        </li>
-    </ul>
+<div id="logContainer" class="max-w-[500] mx-auto p-3">
+    <pre id="logs" class="inline-block w-full bg-[darkslategray] text-white border border-black p-1">Logs go here</pre>
 </div>
 
 <script>
 
+    var usernameEncoded = encodeURIComponent('test');
     var socket = null;
     var ctx = gameCanvas.getContext("2d");
     let pid = null; // Player's PID
 
     function addLog(txt) {
-        let log = document.createElement('pre');
-        let item = document.createElement('li');
-
-        log.classList.add('inline');
-        log.innerText = txt;
-        item.innerText = (ulLog.children.length + 1) + '. ';
-        item.insertAdjacentHTML('beforeend', '<strong>' + log.outerHTML + '</strong>');
-
-        ulLog.insertAdjacentElement('afterbegin', item);
-        logCount.innerText = ulLog.children.length;
+        try {
+            logs.innerText = JSON.stringify(JSON.parse(txt), null, 2);
+        }
+        catch {
+            logs.innerText = txt;
+        }
     }
 
     // Connect web socket
     function connect() {
 
-        const myUsername = username_i.value;
-        var protocol = 'wss://';
-        var usernameComponent = '?username=' + encodeURIComponent(myUsername);
-        
-        if (location.protocol !== 'https:') {
-            protocol = 'ws://';
-        }
-        let wsUrl = protocol + location.host + usernameComponent;
-        socket = new WebSocket(wsUrl);
+        socket = new WebSocket('wss://' + location.host + '/snake/?username=' + usernameEncoded);
 
-        socket.addEventListener('open', function(event) {
+        socket.addEventListener('open', function (event) {
 
-            addLog('Connected to ' + wsUrl);
-            loginForm.classList.add('hidden');
-            mainHeading.classList.add('hidden');
+            addLog('Connected to server.');
+            //loginForm.classList.add('hidden');
             gameCanvasContainer.classList.remove('hidden');
 
             // Setup movement
 
-            bUp.onclick = bLeft.onclick = bDown.onclick = bRight.onclick = function(event) {
+            bUp.onclick = bLeft.onclick = bDown.onclick = bRight.onclick = function (event) {
                 let button = event.target;
                 if (button.tagName == 'I') {
                     button = button.parentElement;
@@ -201,32 +143,31 @@
             }
         });
 
-        socket.addEventListener('message', function(event) {
+        socket.addEventListener('message', function (event) {
             let logText = event.data;
 
             // Try to format as JSON
             try {
                 logText = JSON.stringify(JSON.parse(logText), null, 2);
             }
-            catch {}
+            catch { }
 
             addLog('Message from server:\n' + logText);
             console.log(logText);
-            handleMessage(event.data, myUsername);
+            handleMessage(event.data);
         });
 
-        socket.addEventListener('close', function(event) {
-            addLog('Connection to ' + wsUrl + ' closed.');
-            loginForm.classList.remove('hidden');
-            mainHeading.classList.remove('hidden');
+        socket.addEventListener('close', function (event) {
+            addLog('Connection to closed.');
+            //loginForm.classList.remove('hidden');
             gameCanvasContainer.classList.add('hidden');
             bUp.onclick = bLeft.onclick = bDown.onclick = bRight.onclick = null
         });
     }
 
     // Draw a map block
-    function drawRectangle(y, x, blockSize, fillColor='black', innerBorder=false) {
-        
+    function drawRectangle(y, x, blockSize, fillColor = 'black', innerBorder = false) {
+
         // First draw the rectangle
         ctx.fillStyle = fillColor;
         ctx.fillRect(x * blockSize, y * blockSize, blockSize, blockSize);
@@ -254,7 +195,7 @@
     }
 
     // Draw text on the map block
-    function drawText(y, x, text, textSize, fillColor='black') {
+    function drawText(y, x, text, textSize, fillColor = 'black') {
         ctx.font = textSize + 'px Consolas';
         ctx.textAlign = 'center';
         ctx.textBaseline = 'middle';
@@ -268,7 +209,7 @@
     }
 
     // Convert hex color to RGBA (used when displaying player's teritory blocks)
-    function hexColorToRgb(hexColor, opacity='1.0') {
+    function hexColorToRgb(hexColor, opacity = '1.0') {
         let css = '';
         css += 'rgba(';
         css += hexToDecimal(hexColor.substring(1, 3)) + ', ';
@@ -287,17 +228,15 @@
         }
         else if (obj.type == 'summary') {
 
-            // First show players count
-            ulPlayers.innerHTML = '';
-            for (let player of obj.players) {
-
-                let playerLi = document.createElement('li');
-                playerLi.classList.add('item-player');
-                playerLi.innerText = player.username;
-                playerLi.insertAdjacentHTML('afterbegin', '<span class="player-color" style="background: ' + player.color + '">' + player.territoryCount + '</span> ');
-
-                ulPlayers.insertAdjacentElement('beforeend', playerLi);
-            }
+            //// First show players count
+            //ulPlayers.innerHTML = '';
+            //for (let player of obj.players) {
+            //    let playerLi = document.createElement('li');
+            //    playerLi.classList.add('item-player');
+            //    playerLi.innerText = player.username;
+            //    playerLi.insertAdjacentHTML('afterbegin', '<span class="player-color" style="background: ' + player.color + '">' + player.territoryCount + '</span> ');
+            //    ulPlayers.insertAdjacentElement('beforeend', playerLi);
+            //}
 
             // Now process the map
 
@@ -310,7 +249,7 @@
 
             // Remove previous blocks before drawing new ones
             clearCanvas();
-            
+
             // Iterate map rows
             for (let r of rows) {
 
@@ -319,7 +258,7 @@
 
                 // Iterate row blocks
                 for (let c of cols) {
-                    
+
                     // Default terrain color
                     let blockColor = 'lightblue';
 
@@ -333,7 +272,7 @@
                         drawRectangle(currRow, currCol, blockSize, blockColor);
                     }
                     else if (c.split('-')[0] == 'p') {
-                        
+
                         if (c.split('-')[1] == pid) {
                             // Player's main block
                             drawRectangle(currRow, currCol, blockSize, blockColor, true);
@@ -349,7 +288,7 @@
                         }
                     }
                     else if (c.split('-')[0] == 't') {
-                        
+
                         // Teritory blocks, drawn with 50% opacity
                         if (c.split('-')[1] == pid) {
                             // Player teritory
@@ -368,18 +307,18 @@
     }
 
     // Initialize page
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
 
-        // Initialize the input form
-        username_i.value = '';
-        username_i.addEventListener('keyup', function() {
-            if (username_i.value.length > 2) {
-                signInButton.disabled = false;
-            }
-            else {
-                signInButton.disabled = true;
-            }
-        });
+        //// Initialize the input form
+        //username_i.value = '';
+        //username_i.addEventListener('keyup', function () {
+        //    if (username_i.value.length > 2) {
+        //        signInButton.disabled = false;
+        //    }
+        //    else {
+        //        signInButton.disabled = true;
+        //    }
+        //});
 
         // Initialize onclicks
         document.addEventListener('keydown', function (event) {
@@ -421,15 +360,13 @@
         bDown.style.width = (cWidth + 2 * 50) + 'px';
 
         // Player list display
-        playersContainer.style.width = (cWidth + 2 * 50) + 'px';
-        
+        //playersContainer.style.width = (cWidth + 2 * 50) + 'px';
+
 
         // Only show logs on localhost
         if (location.hostname == 'localhost') {
             logContainer.classList.remove('hidden');
-        
-            // Try to login with 'test'
-            username_i.value = 'test';
+
             connect();
         }
 
