--- a/tps_game/Views/Game/Snake.cshtml
+++ b/tps_game/Views/Game/Snake.cshtml
@@ -27,7 +27,12 @@
 
     logs.innerText = 'Logs go here';
 
-    var socket = new WebSocket('wss://' + location.host + '/game/snake?username=Test');
+    let wsProtocol = 'ws://';
+    if (location.protocol === 'https:') {
+        wsProtocol = 'wss://'
+    }
+    
+    var socket = new WebSocket(wsProtocol + location.host + '/game/snake?username=Test');
 
     socket.onopen = function() {
         logs.innerText = 'Connection open.';
